@@ -190,7 +190,7 @@ public class JasperReportService implements ReportService {
                                 if (defaultValues.containsKey(reportParm.getName()) && (defaultValues.get(reportParm.getName()) != null)) {
                                     intParm.setValue((Integer) defaultValues.get(reportParm.getName()));
                                 } else {
-                                    intParm.setValue(new Integer(0));
+                                    intParm.setValue(Integer.valueOf(0));
                                 }
                                 intParms.add(intParm);
                                 continue;
@@ -242,7 +242,7 @@ public class JasperReportService implements ReportService {
                                     dateParm.setDisplayName(reportParm.getName());
                                 }
                                 dateParm.setName(reportParm.getName());
-                                dateParm.setCount(new Integer(1));
+                                dateParm.setCount(Integer.valueOf(1));
                                 dateParm.setInterval("day");
                                 dateParm.setHours(0);
                                 dateParm.setMinutes(0);
@@ -274,7 +274,7 @@ public class JasperReportService implements ReportService {
                                     dateParm.setDisplayName(reportParm.getName());
                                 }
                                 dateParm.setName(reportParm.getName());
-                                dateParm.setCount(new Integer(1));
+                                dateParm.setCount(Integer.valueOf(1));
                                 dateParm.setInterval("day");
                                 dateParm.setHours(0);
                                 dateParm.setMinutes(0);
